[package]
name = "blars"
version = "0.0.1"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true

[[bin]]
name="blars_file"
path="src/bin/file.rs"

[lib]
name = "blars"


[dependencies]
rand = "*"
num = "*"
eventual = "*"

[dependencies.xxhash]

git = "https://github.com/rrichardson/rust-xxhash"

#[dependencies.streaming-stats]
#git = "git://github.com/BurntSushi/rust-stats"
